--- a/styles.css
+++ b/styles.css
@@ -173,6 +173,57 @@ nav{
     letter-spacing: 2px;
 }
 
+/* Image Scrolling Section Related Styles */
+
+#scroller{
+    width: 100%;
+    height: 30%;
+    padding: 1vw;
+
+    white-space: nowrap;
+
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+#scroller-content{
+    width: 110%;
+    height: 100%;
+
+    padding: .50vw;
+
+    display: inline-block;
+
+    animation-name: autoScrolling;
+    animation-timing-function: linear;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-delay: 0.5s;
+
+}
+
+#scroller-content img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    
+    margin: 10px 40px;
+
+    object-fit: cover;
+    object-position: top;
+
+}
+
+
+@keyframes autoScrolling {
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(-100%);
+    }
+    
+}
 
 
 
