--- a/styles.css
+++ b/styles.css
@@ -100,8 +100,6 @@ nav{
     width: 100vw;
     height: 80vh;
     padding: 2vw 5vw;
-
-
 }
 
 .hero-content{
@@ -116,7 +114,7 @@ nav{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: top;
+    object-position: center;
 }
 
 #overlay{
@@ -124,7 +122,7 @@ nav{
     height: 30%;
 
     position: absolute;
-    bottom: 5%;
+    bottom: 2%;
     left: 8%;
 }
 
@@ -223,6 +221,60 @@ nav{
         transform: translateX(-100%);
     }
     
+}
+
+/* Alphabets Section Related Styles */
+#alphabets{
+    width: 100vw;
+    height: 10vh;
+
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-top: 2px solid #000 ;
+    border-bottom: 2px solid #000 ;
+}
+
+#alphabets h4{
+    font-size: 2vw;
+    font-weight: 500;
+    font-style: italic;
+    margin-right: 2vw;
+
+}
+
+#alphabets h6{
+    /* width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid #000;
+    padding: 5px 10px;
+
+    display: flex;
+    align-items: center; */
+    font-size: 1.2vw;
+    font-weight: 500;
+    font-style: italic;
+    margin-right: 1.5vw;
+
+}
+
+#alphabets h6:hover{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid #000;
+    padding: 5px 10px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+    transition: linear ease;
+
 }
 
 
