--- a/styles.css
+++ b/styles.css
@@ -246,14 +246,6 @@ nav{
 }
 
 #alphabets h6{
-    /* width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: 1px solid #000;
-    padding: 5px 10px;
-
-    display: flex;
-    align-items: center; */
     font-size: 1.2vw;
     font-weight: 500;
     font-style: italic;
@@ -275,6 +267,60 @@ nav{
 
     transition: linear ease;
 
+}
+
+/* Page2 Related Styles */
+
+#page2{
+    width: 100vw;
+    height: 100vh;
+    margin: 8vh 0;
+
+    padding: 0 5vw;
+
+    display: flex;
+    align-items: center;
+    gap: 5vw;
+}
+
+#page2-part1{
+    width: 50%;
+    height: 100%;
+}
+
+#page2-part1 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+#page2-part2{
+    width: 40%;
+    height: 100%;
+
+}
+#page2-part2 img{
+    width: 100%;
+    height: 75%;
+    object-fit: cover;
+    object-position: center;
+
+}
+
+#part2-text{
+    margin-top: 20px;
+    display: flex;
+    gap: 5vw;
+}
+
+#part2-text h2{
+    font-size: 28px;
+    font-weight: 600;
+}
+#part2-text p{
+    font-size: 18px;
+    font-weight: 500;
 }
 
 
