--- a/styles.css
+++ b/styles.css
@@ -274,7 +274,7 @@ nav{
 #page2{
     width: 100vw;
     height: 100vh;
-    margin: 8vh 0;
+    margin-top: 8vh;
 
     padding: 0 5vw;
 
@@ -325,3 +325,85 @@ nav{
 
 
 
+/* Page3 Related Styles */
+
+#page3{
+    width: 100vw;
+    height: 100vh;
+
+    padding: 0.05vw 5vw;
+
+    /* display: flex;
+    align-items: center;
+    gap: 5vw; */
+}
+#page3 h2{
+    font-size: 3vw;
+    font-family: monument;
+    margin: 1vh 0vw;
+}
+
+#page3-content{
+    width: 100%;
+    height: 90.5%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#page3-content-part1{
+    width: 55%;
+    height: 100%;
+    margin-top: 1vw;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    position: relative;
+}
+
+#page3-content-part1 img{
+   width: 300px;
+   height: 300px;
+   position: relative;
+
+   margin: 0px 5vw;
+
+}
+
+#page3-content-part1 #arrow{
+   position: absolute;
+   top: 25%;
+   left: 11%;
+}
+
+#page3-content-part1 p{
+   font-size: 32px;
+   font-weight: 500;
+
+   margin-top: 8vw;
+}
+
+
+
+
+
+
+
+#page3-content-part2{
+    width: 45%;
+    height: 100%;
+    padding: 5vh 0vh;
+}
+
+#page3-content-part2 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
+
+    border-radius: 1vw;
+
+}
