--- a/styles.css
+++ b/styles.css
@@ -436,3 +436,120 @@ nav{
 
     font-size: 18px;
 }
+
+/* Updates Section Related Styles */
+
+#updates{
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    padding: 0.05vw 5vw;
+}
+
+#updates h2{
+    text-align: center;
+    font-size: 36px;
+    font-family: monument;
+    margin: 2vw 0vw;
+    
+}
+
+#updates-content{
+    margin-top: 3vw;
+    width: 100%;
+    height: 80%;
+    background-color: greenyellow;
+}
+
+.content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2vw 5vw;
+
+
+    border-top: 2px solid #000;
+    border-bottom: 2px solid #000;
+}
+
+.content-part1{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+
+    gap: 8.5vw;
+}
+
+#content-part1-text h4{
+    font-size: 1.5vw;
+    font-weight: 600;
+}
+
+
+
+.content-part1 h3{
+    
+    font-size: 1.5vw;
+    font-weight: 500;
+    text-transform: uppercase;
+
+    position: relative;
+}
+
+.content-part2{
+    width: 50%  ;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+
+.content-part2 img{
+    display: block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+
+    object-fit: cover;
+    object-position: center;
+
+
+
+    position: absolute;
+    left: 25vw;
+
+    
+}
+
+.content:hover img{
+    animation-name: move;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear ease-in-out;
+}
+
+
+.content-part2 h4{
+    /* margin-right: 15vw; */
+    font-size: 3vw;
+    font-weight: 500;
+
+}
+.content-part2-text0 h4{
+    /* margin-right: 15vw; */
+    font-size: 2vw;
+    font-weight: 500;
+
+}
+
+
+@keyframes move {
+    from{
+        transform: translateX(0%);
+    }
+
+    to{
+        transform: translateX(-120%);
+    }
+    
+}
