--- a/styles.css
+++ b/styles.css
@@ -300,6 +300,8 @@ nav{
     height: 100%;
 
 }
+
+
 #page2-part2 img{
     width: 100%;
     height: 75%;
@@ -318,6 +320,7 @@ nav{
     font-size: 28px;
     font-weight: 600;
 }
+
 #part2-text p{
     font-size: 18px;
     font-weight: 500;
@@ -337,6 +340,7 @@ nav{
     align-items: center;
     gap: 5vw; */
 }
+
 #page3 h2{
     font-size: 3vw;
     font-family: monument;
@@ -442,7 +446,6 @@ nav{
 #updates{
     width: 100%;
     height: 100%;
-    background-color: red;
     padding: 0.05vw 5vw;
 }
 
@@ -458,17 +461,18 @@ nav{
     margin-top: 3vw;
     width: 100%;
     height: 80%;
-    background-color: greenyellow;
 }
 
 .content{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2vw 5vw;
-
+    padding: 2.4vw 5vw;
 
     border-top: 2px solid #000;
+}
+
+.content:nth-last-child(1){
     border-bottom: 2px solid #000;
 }
 
@@ -552,4 +556,316 @@ nav{
         transform: translateX(-120%);
     }
     
+}
+
+#marque{
+    width: 100%;
+    padding: 0.8vw;
+
+    white-space: nowrap;
+    overflow-x: hidden;
+    overflow-y: hidden;
+
+    border-top: 2px solid #000;
+    border-bottom: 2px solid #000;
+
+
+}
+
+#marque h2{
+    display: inline-block;
+    font-size: 3vw;
+    text-transform: uppercase;
+    font-family: monument;
+    -webkit-text-stroke: 2px #000;
+    color: transparent;
+    letter-spacing: 3px;
+
+    margin-right: 16px;
+
+    animation-name: moveText;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+
+
+}
+
+@keyframes moveText {
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(calc(-100% - 20px));
+    }
+    
+}
+
+
+
+#footer{
+    width: 100%;
+    height: 20%;
+    padding: 50px 75px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+/* For Mobile Device Only */
+@media screen and (max-width: 600px) {
+    body{
+        overflow-x: hidden;
+    }
+
+    nav{
+        height: 10vh;
+        margin-top: 1vw;
+        padding: 0 5vw;
+        justify-content: flex-start;
+    }
+    
+    .nav-title{
+        width: 30vw;
+        font-family: monument;
+        font-size: 20px;
+    
+        position: relative;
+    }
+    
+    .nav-title::after{
+        display: none;
+    }
+    
+    .nav-title::before{
+        display: none;   
+    }
+    
+    .nav-menu{
+        border: none;
+        display: none;
+    }
+
+    #menu-icon{
+        padding-top: 3%;
+        font-size: 3vw;
+        margin: 63%;
+        display: block;
+    }
+
+    #hero{
+        height: 80%;
+        position: relative;
+    }
+    
+    
+    
+    #overlay{
+        height: 30%;
+    }
+    
+    #overlay-top h3{
+        color: #fafafa;
+        font-size: 3vw;
+        font-weight: 600;
+    
+        width: 25px;
+        height: 25px;
+        border-radius: 50px;
+    }
+    
+   
+    
+    #overlay-bottom h4{
+        color: #fafafa;
+        font-size: 2.5vw;
+        font-weight: 400;
+        letter-spacing: 2px;
+    }
+
+    
+#scroller{
+    height: 30%;
+
+}
+
+#scroller-content{
+    height: 30%;
+    margin-right: 35px;
+}
+
+#scroller-content img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    
+    margin: 5px;
+
+}
+
+
+#alphabets h6{
+    font-size: 2vw;
+}
+
+#alphabets h6:hover{
+    font-size: 3vw;
+
+
+}
+
+/* Page2 Related Styles */
+
+#page2{
+    flex-direction: column;
+}
+
+#page2-part2{
+    width: 50%;
+    height: 100%;
+}
+
+#part2-text{
+    display: none;
+    flex-direction: column;
+    margin-top: 5px;
+}
+
+/* Page3 Related Styles */
+
+#page3 h2{
+    display: none;
+}
+
+#page3-content{
+    margin-top: 10% ;
+    flex-direction: column;
+}
+
+#page3-content-part1{
+    width: 100%;
+    margin-top: 10vw;
+    
+}
+
+#page3-content-part1 img{
+   width: 150px;
+   height: 150px;
+   margin: 0vw 25vw;
+   
+}
+
+#page3-content-part1 #arrow{
+    display: none;
+}
+
+#page3-content-part1 p{
+   font-size: 20px;
+   font-weight: 600;
+   margin: 0;
+}
+#page3-content-part2 img{
+    display: none;
+}
+
+
+/* Page4 Related Styles */
+#page4{
+    width: 100%;
+    height: 100%;
+    padding: 5vw;
+
+    position: relative;
+    
+}
+
+#page4 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#page4-overlay{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 2px solid #000;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: absolute;
+    top: 12%;
+    left: 85%;
+
+    font-size: 18px;
+}
+
+/* Updates Section Related Styles */
+
+#updates{
+    width: 100%;
+    height: 100%;
+    padding: 0.05vw 5vw;
+}
+
+#updates h2{
+    font-size: 24px;
+}
+
+#updates-content{
+    margin-top: 3vw;
+    width: 100%;
+    height: 80%;
+}
+
+.content{
+    padding: 2.4vw 3vw;
+}
+
+.content-part1 h3{   
+    font-size: 2.2vw;
+}
+
+
+.content-part2 img{
+   display: none;
+    
+}
+
+.content-part2 h4{
+    font-size: 4vw;
+    font-weight: 500;
+}
+
+.content-part2 p{
+    font-size: 2vw;
+    font-weight: 500;
+}
+
+#content-part1-text{
+    display: none;
+}
+
+.content-part2-text0 h4{
+    font-size: 1vw;
+    font-weight: 500;
+
+}
+
+#footer{
+    text-align: center;
+    height: 50%;
+    background-color: bisque;
+
+    padding: 20px 75px;
+
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 }
