Upto page4 responsiveness correction done

--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,13 @@ nav{
     letter-spacing: 2px;
 }
 
+#overlay-bottom img{
+    width: 50px;
+    height: 50px;
+}
+
+
+
 /* Image Scrolling Section Related Styles */
 
 #scroller{
@@ -272,8 +279,8 @@ nav{
 /* Page2 Related Styles */
 
 #page2{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     margin-top: 8vh;
 
     padding: 0 5vw;
@@ -331,14 +338,9 @@ nav{
 /* Page3 Related Styles */
 
 #page3{
-    width: 100vw;
-    height: 100vh;
-
+    width: 100%;
+    height: 100%;
     padding: 0.05vw 5vw;
-
-    /* display: flex;
-    align-items: center;
-    gap: 5vw; */
 }
 
 #page3 h2{
@@ -614,194 +616,258 @@ nav{
 }
 
 
+
 /* For Mobile Device Only */
 @media screen and (max-width: 600px) {
-    body{
-        overflow-x: hidden;
-    }
-
+   body{
+    overflow-x: hidden;
+   }
+    /* Nav Related Styles */
     nav{
-        height: 10vh;
-        margin-top: 1vw;
-        padding: 0 5vw;
-        justify-content: flex-start;
-    }
-    
-    .nav-title{
-        width: 30vw;
-        font-family: monument;
-        font-size: 20px;
-    
-        position: relative;
-    }
-    
-    .nav-title::after{
-        display: none;
-    }
-    
-    .nav-title::before{
-        display: none;   
-    }
-    
-    .nav-menu{
-        border: none;
-        display: none;
-    }
+    width: 100vw;
+    height: 10vh;
+    margin-top: 1vw;
+}
 
-    #menu-icon{
-        padding-top: 3%;
-        font-size: 3vw;
-        margin: 63%;
-        display: block;
-    }
+.nav-title{
+    width: 50vw;
+    font-size: 24px;
+}
 
-    #hero{
-        height: 80%;
-        position: relative;
-    }
-    
-    
-    
-    #overlay{
-        height: 30%;
-    }
-    
-    #overlay-top h3{
-        color: #fafafa;
-        font-size: 3vw;
-        font-weight: 600;
-    
-        width: 25px;
-        height: 25px;
-        border-radius: 50px;
-    }
-    
-   
-    
-    #overlay-bottom h4{
-        color: #fafafa;
-        font-size: 2.5vw;
-        font-weight: 400;
-        letter-spacing: 2px;
-    }
+.nav-title::after,
+.nav-title::before,
+.nav-menu{
+    display: none;
+}
 
-    
+#menu-icon{
+    font-size: 3vw;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    border: none;
+}
+
+/* Hero Section Styles */
+#hero{
+    height: 60vh;
+    padding: 1vw 5vw;
+}
+
+.hero-content{
+    width: 100%;
+    height: 100%;
+
+    position: relative;
+}
+
+#overlay{
+    height: 35%;
+    position: absolute;
+    bottom: 15%;
+}
+
+#overlay-top h2{
+    letter-spacing: 0.5px;
+}
+
+#overlay-top h3{
+    width: 25px;
+    height: 25px;
+    border-radius: 50px;
+    border: 2px solid #fafafa;
+}
+
+#overlay-bottom h4{
+    color: #fafafa;
+    font-size: 2.5vw;
+}
+
+#overlay-bottom img{
+    width: 20px;
+    height: 20px;
+    padding-right: 5px;
+}
+
+/* Image Scrolling Section Related Styles */
+
 #scroller{
-    height: 30%;
-
+    height: 20%;
+    padding: 1vw;
 }
 
 #scroller-content{
-    height: 30%;
-    margin-right: 35px;
+    width: 100%;
+    margin-right: 30px;
+    padding: .50vw;
+    animation-duration: 5s;
 }
 
 #scroller-content img{
     width: 50px;
     height: 50px;
-    border-radius: 50%;
-    
-    margin: 5px;
+    margin: 0 2px;
 
 }
 
+
+@keyframes autoScrolling {
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(calc(-100% - 34px));
+    }
+    
+}
+
+/* Alphabets Section Related Styles */
+
+
+#alphabets h4{
+    font-size: 4vw;
+}
 
 #alphabets h6{
     font-size: 2vw;
 }
 
 #alphabets h6:hover{
-    font-size: 3vw;
-
-
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    padding: 2px 5px;
 }
 
 /* Page2 Related Styles */
 
 #page2{
-    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    margin-top: 2px;
+    padding: 0 5vw;
+    justify-content: center;
+    gap: 1vw;
+}
+
+#page2-part1{
+    width: 40%;
 }
 
 #page2-part2{
-    width: 50%;
-    height: 100%;
+    width: 60%;
+    text-align: justify;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+#page2-part2 img{
+    display: none;
+
 }
 
 #part2-text{
-    display: none;
+    display: flex;
     flex-direction: column;
-    margin-top: 5px;
+    gap: 5vw;
 }
+
+#part2-text h2{
+    font-size: 16px;
+}
+
+#part2-text p{
+    font-size: 12px;
+}
+
+
 
 /* Page3 Related Styles */
 
+#page3{
+    width: 100%;
+    height: 100%;
+
+    padding: 5vw 5vw;
+}
+
 #page3 h2{
-    display: none;
+    font-size: 4vw;
+    text-align: center;
+    font-family: monument;
+    margin: 0;
 }
 
 #page3-content{
-    margin-top: 10% ;
+    height: 95%;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #page3-content-part1{
     width: 100%;
-    margin-top: 10vw;
-    
+    height: 100%;
+    margin-top: 0;
+    flex-direction: column;
+    justify-content: flex-start;
+
 }
 
 #page3-content-part1 img{
-   width: 150px;
-   height: 150px;
-   margin: 0vw 25vw;
-   
+    display: none;
+
 }
 
 #page3-content-part1 #arrow{
-    display: none;
+   display: none;
 }
 
 #page3-content-part1 p{
-   font-size: 20px;
-   font-weight: 600;
-   margin: 0;
+   font-size: 16px;
+   font-weight: 500;
+   text-align: center;
+   margin-top: 2vw;
 }
+#page3-content-part2{
+    width: 100%;
+    height: 100%;
+    padding: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #page3-content-part2 img{
-    display: none;
+    width: 250px;
+    height: 220px;
+    object-fit: cover;
+    object-position: top;
+
+    border-radius: 1vw;
+
+    margin-bottom: 1vw;
+
 }
 
 
 /* Page4 Related Styles */
 #page4{
-    width: 100%;
-    height: 100%;
-    padding: 5vw;
-
-    position: relative;
+    height: 50%;
     
 }
 
-#page4 img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
 #page4-overlay{
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: 2px solid #000;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    position: absolute;
-    top: 12%;
+    width: 20px;
+    height: 20px;
+    top: 15%;
     left: 85%;
 
-    font-size: 18px;
+    font-size: 14px;
 }
 
 /* Updates Section Related Styles */
@@ -813,7 +879,10 @@ nav{
 }
 
 #updates h2{
-    font-size: 24px;
+    text-align: center;
+    font-size: 36px;
+    font-family: monument;
+    margin: 2vw 0vw;    
 }
 
 #updates-content{
@@ -823,49 +892,156 @@ nav{
 }
 
 .content{
-    padding: 2.4vw 3vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2.4vw 5vw;
+
+    border-top: 2px solid #000;
 }
 
-.content-part1 h3{   
-    font-size: 2.2vw;
+.content:nth-last-child(1){
+    border-bottom: 2px solid #000;
 }
 
+.content-part1{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+
+    gap: 8.5vw;
+}
+
+#content-part1-text h4{
+    font-size: 1.5vw;
+    font-weight: 600;
+}
+
+
+
+.content-part1 h3{
+    
+    font-size: 1.5vw;
+    font-weight: 500;
+    text-transform: uppercase;
+
+    position: relative;
+}
+
+.content-part2{
+    width: 50%  ;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
 
 .content-part2 img{
-   display: none;
+    display: block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+
+    object-fit: cover;
+    object-position: center;
+
+
+
+    position: absolute;
+    left: 25vw;
+
     
 }
 
-.content-part2 h4{
-    font-size: 4vw;
-    font-weight: 500;
+.content:hover img{
+    animation-name: move;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear ease-in-out;
 }
 
-.content-part2 p{
+
+.content-part2 h4{
+    /* margin-right: 15vw; */
+    font-size: 3vw;
+    font-weight: 500;
+
+}
+.content-part2-text0 h4{
+    /* margin-right: 15vw; */
     font-size: 2vw;
     font-weight: 500;
-}
-
-#content-part1-text{
-    display: none;
-}
-
-.content-part2-text0 h4{
-    font-size: 1vw;
-    font-weight: 500;
 
 }
+
+
+@keyframes move {
+    from{
+        transform: translateX(0%);
+    }
+
+    to{
+        transform: translateX(-120%);
+    }
+    
+}
+
+#marque{
+    width: 100%;
+    padding: 0.8vw;
+
+    white-space: nowrap;
+    overflow-x: hidden;
+    overflow-y: hidden;
+
+    border-top: 2px solid #000;
+    border-bottom: 2px solid #000;
+
+
+}
+
+#marque h2{
+    display: inline-block;
+    font-size: 3vw;
+    text-transform: uppercase;
+    font-family: monument;
+    -webkit-text-stroke: 2px #000;
+    color: transparent;
+    letter-spacing: 3px;
+
+    margin-right: 16px;
+
+    animation-name: moveText;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+
+
+}
+
+@keyframes moveText {
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(calc(-100% - 20px));
+    }
+    
+}
+
+
 
 #footer{
-    text-align: center;
-    height: 50%;
-    background-color: bisque;
+    width: 100%;
+    height: 20%;
+    padding: 50px 75px;
 
-    padding: 20px 75px;
-
-    flex-direction: column;
-    justify-content: center;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
+
 }
+
+
