--- a/styles.css
+++ b/styles.css
@@ -751,11 +751,11 @@ nav{
 }
 
 #page2-part1{
-    width: 40%;
+    width: 60%;
 }
 
 #page2-part2{
-    width: 60%;
+    width: 30%;
     text-align: justify;
 
     display: flex;
@@ -802,7 +802,7 @@ nav{
 }
 
 #page3-content{
-    height: 95%;
+    height: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -843,8 +843,8 @@ nav{
 }
 
 #page3-content-part2 img{
-    width: 250px;
-    height: 220px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
     object-position: top;
 
@@ -874,83 +874,49 @@ nav{
 
 #updates{
     width: 100%;
-    height: 100%;
+    height: 80%;
     padding: 0.05vw 5vw;
 }
 
 #updates h2{
-    text-align: center;
-    font-size: 36px;
-    font-family: monument;
-    margin: 2vw 0vw;    
+    font-size: 24px;   
 }
 
 #updates-content{
     margin-top: 3vw;
     width: 100%;
-    height: 80%;
+    height: 10%;
 }
 
 .content{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2.4vw 5vw;
-
+    padding: 5vw 5vw;
     border-top: 2px solid #000;
-}
-
-.content:nth-last-child(1){
-    border-bottom: 2px solid #000;
 }
 
 .content-part1{
     width: 50%;
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
-
-    gap: 8.5vw;
 }
 
 #content-part1-text h4{
-    font-size: 1.5vw;
-    font-weight: 600;
+    font-size: 3vw;
+    text-align: center;
 }
-
-
+#content-part1-text p{
+    font-size: 2vw;
+    text-align: center;
+}
 
 .content-part1 h3{
-    
-    font-size: 1.5vw;
-    font-weight: 500;
-    text-transform: uppercase;
-
-    position: relative;
+    font-size: 3vw;
 }
-
-.content-part2{
-    width: 50%  ;
-    display: flex;
-    align-items: center;
-    justify-content: start;
-}
-
 .content-part2 img{
     display: block;
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
+    width: 50px;
+    height: 50px;
 
-    object-fit: cover;
-    object-position: center;
-
-
-
-    position: absolute;
-    left: 25vw;
-
-    
+    left: 33%;
 }
 
 .content:hover img{
@@ -960,15 +926,13 @@ nav{
     animation-timing-function: linear ease-in-out;
 }
 
-
 .content-part2 h4{
-    /* margin-right: 15vw; */
     font-size: 3vw;
     font-weight: 500;
 
 }
+
 .content-part2-text0 h4{
-    /* margin-right: 15vw; */
     font-size: 2vw;
     font-weight: 500;
 
@@ -987,27 +951,15 @@ nav{
 }
 
 #marque{
-    width: 100%;
-    padding: 0.8vw;
-
-    white-space: nowrap;
-    overflow-x: hidden;
-    overflow-y: hidden;
-
-    border-top: 2px solid #000;
-    border-bottom: 2px solid #000;
-
-
+    margin: 0;
+    height: 40px;
 }
 
 #marque h2{
-    display: inline-block;
-    font-size: 3vw;
-    text-transform: uppercase;
-    font-family: monument;
-    -webkit-text-stroke: 2px #000;
-    color: transparent;
-    letter-spacing: 3px;
+    font-size: 4vw;
+    -webkit-text-stroke: 1px #000;
+    color: #fafafa;
+    letter-spacing: 4px;
 
     margin-right: 16px;
 
@@ -1015,8 +967,6 @@ nav{
     animation-duration: 4s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
-
-
 }
 
 @keyframes moveText {
@@ -1032,13 +982,14 @@ nav{
 
 
 #footer{
-    width: 100%;
+    margin: 5vw;
     height: 20%;
-    padding: 50px 75px;
-
-    display: flex;
+    padding: 20px 30px;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+
+    text-align: center;
 }
 
 
