--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ nav{
 }
 
 #scroller-content{
-    width: 110%;
+    width: 100%;
     height: 100%;
 
     padding: .50vw;
@@ -844,7 +844,7 @@ nav{
 
 #page3-content-part2 img{
     width: 300px;
-    height: 300px;
+    height: fit-content;
     object-fit: cover;
     object-position: top;
 
